--- a/pages/swift/basics.html
+++ b/pages/swift/basics.html
@@ -102,7 +102,7 @@
 
 <h4>Example</h4>
 <p>Download a copy of the project from the demo by clicking on this link.</p>
-<a href="http://solarswiftem.com/examples/swift/lesson1" target="_blank">Download</a>
+<a href="http://solarswiftem.com/examples/swift/lesson1" target="_blank">Example 1</a>
 
 <h4>Exercises</h4>
 <ul>
