updated about with new link title for printing lesson

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                     <a href="installation.html">Planet Installation</a>
                 </li>
                 <li>
-                    <a href="basics.html">Planet Basics</a>
+                    <a href="basics.html">Planet Printing</a>
                 </li>
                 <li>
                     <a href="loops.html">Planet Loops</a>
