--- a/about.html
+++ b/about.html
@@ -41,33 +41,28 @@
                     </a>
                 </li>
                 <li>
-                    <a href="installation.html">Planet Installation</a>
+                    <a href="pages/swift/installation.html">Planet Installation</a>
                 </li>
                 <li>
-                    <a href="basics.html">Planet Printing</a>
+                    <a href="pages/swift/basics.html">Planet Printing</a>
                 </li>
                 <li>
-                    <a href="loops.html">Planet Loops</a>
+                    <a href="pages/swift/loops.html">Planet Loops</a>
                 </li>
                 <li>
-                    <a href="conditionals.html">Planet Conditionals</a>
+                    <a href="pages/swift/conditionals.html">Planet Conditionals</a>
                 </li>
                     <li>
-                    <a href="variables.html">Planet Arrays</a>
+                    <a href="pages/swift/variables.html">Planet Arrays</a>
                 </li>
                 <li>
-                    <a href="functions.html">Planet Functions</a>
+                    <a href="pages/swift/functions.html">Planet Functions</a>
                 </li>
 
                 <li>
                     <a href="#">Planet Test Yourself</a>
                 </li>
-                 <li>
-                    <a href="ios.html">Planet iOS</a>
-                </li>
-                  <li>
-                    <a href="about.html">About Us</a>
-                </li>
+              
 
 
             </ul>
@@ -152,6 +147,10 @@
 		<a href="https://twitter.com/solarswiftem">
 		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
+		<a href="https://developer.apple.com/swift/">
+		<img src="img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 90px;">
+	</a>
+	
 
 </body>
 
