OMG SOMETHING HAPPENED

--- a/index.html
+++ b/index.html
@@ -193,16 +193,13 @@ which.style.top=0
  -->
 
 	<a href="https://www.facebook.com/solarswiftem">
-		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
+		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px;">
 	</a>
 	<a href="https://twitter.com/solarswiftem">
-		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
+		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
-	<a href="https://developer.apple.com/swift/">
-		<img src="img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 90px;">
-	</a>
-	<a href="https://developer.apple.com/swift/">
-		<img src="swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 90px;">
+		<a href="https://developer.apple.com/swift/">
+		<img src="img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 90px;">
 	</a>
 	
 
