--- a/about.html
+++ b/about.html
@@ -40,28 +40,16 @@
                         The Solar Swiftem
                     </a>
                 </li>
-                <li>
-                    <a href="pages/swift/installation.html">Planet Installation</a>
+                   <li>
+                    <a href="home.html">Planet Swift</a>
                 </li>
-                <li>
-                    <a href="pages/swift/basics.html">Planet Printing</a>
+                 <li>
+                    <a href="ios.html">Planet iOS</a>
                 </li>
-                <li>
-                    <a href="pages/swift/loops.html">Planet Loops</a>
+                 <li>
+                    <a href="about.html">About Us</a>
                 </li>
-                <li>
-                    <a href="pages/swift/conditionals.html">Planet Conditionals</a>
-                </li>
-                    <li>
-                    <a href="pages/swift/variables.html">Planet Arrays</a>
-                </li>
-                <li>
-                    <a href="pages/swift/functions.html">Planet Functions</a>
-                </li>
-
-                <li>
-                    <a href="#">Planet Test Yourself</a>
-                </li>
+             
               
 
 
@@ -141,14 +129,14 @@
     });
     </script>
 
-    <a href="https://www.facebook.com/solarswiftem">
-		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
+ <a href="https://www.facebook.com/solarswiftem">
+		<img src="../../img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px;">
 	</a>
-		<a href="https://twitter.com/solarswiftem">
-		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
+	<a href="https://twitter.com/solarswiftem">
+		<img src="../../img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
 		<a href="https://developer.apple.com/swift/">
-		<img src="img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 90px;">
+		<img src="../../img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 90px;">
 	</a>
 	
 
