Stars is a dick

--- a/pages/ios/outlets.html
+++ b/pages/ios/outlets.html
@@ -163,9 +163,10 @@ which.style.top=0
 
 </ul>
 
-<h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
- 
+<h4><strong>Solutions:</strong></h4>
+<p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
+
+<a href="../../solutions/lesson3/for.swift" target="_blank"> <strong> Download</strong></a>
  
 
 </div>
