--- a/pages/ios/wholeapp.html
+++ b/pages/ios/wholeapp.html
@@ -168,8 +168,10 @@ It is finally time to put all of your knowledge together into one full app! You 
 
 </ul>
 
-<h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
+<h4><strong>Solutions:</strong></h4>
+<p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
+
+<a href="../../solutions/lesson3/for.swift" target="_blank"> <strong> Download</strong></a>
  
  
 
