--- a/pages/swift/basics.html
+++ b/pages/swift/basics.html
@@ -153,9 +153,10 @@ which.style.top=0
 
 <p>#############################</p> 
 
-<h4>Example</h4>
-<p>Download a copy of the project from the demo by clicking on this link.</p>
-<a href="http://solarswiftem.com/examples/swift/lesson1" target="_blank">Download</a>
+<h4><strong>Solutions:</strong></h4>
+<p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
+
+<a href="../../solutions/lesson3/for.swift" target="_blank"> <strong> Download</strong></a>
 
 <h4>Exercises</h4>
 <ul>
