--- a/pages/swift/conditionals.html
+++ b/pages/swift/conditionals.html
@@ -156,10 +156,10 @@ which.style.top=0
 <li>Write a program that takes an input from the user, and identifies if it’s an integer or a character, and then indicates if it’s in</li>
 </ul>
 
-<h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
- 
- 
+<h4><strong>Solutions:</strong></h4>
+<p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
+
+<a href="../../solutions/lesson3/for.swift" target="_blank"> <strong> Download</strong></a>
 
 
 
