--- a/pages/swift/variables.html
+++ b/pages/swift/variables.html
@@ -162,8 +162,10 @@ which.style.top=0
 	<li>Write a program that creates an array of size 5 with the numbers 1-5, and then swaps the 3rd and last numbers</li>
 </ul>
 
-<h4>Answers:</h4>
-<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
+<h4><strong>Solutions:</strong></h4>
+<p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
+
+<a href="../../solutions/lesson4/arrays.swift" target="_blank"> <strong> Download</strong></a>
 
 </div>
 <div id="rightcolumn">
