--- a/pages/swift/conditionals.html
+++ b/pages/swift/conditionals.html
@@ -94,9 +94,6 @@ which.style.top=0
                         The Solar Swiftem
                     </a>
                 </li>
-                <li>
-                    <a href="installation.html">Installation</a>
-                </li>
                <li>
                     <a href="basics.html">Printing</a>
                 </li>
@@ -139,16 +136,15 @@ which.style.top=0
 <h3 align="center">Lesson 4: Conditionals</h3>
  
 <h4>Objective:</h4>
-<p>In this lesson you will learn how to use ‘If statements’. If statements are useful for making certain blocks of code run only when the condition is met. While a simple mechanic, the many possible applications and therefore, it is beneficial that you fully understand them in order to be a better programmer.</p>
+<p>In this lesson you will learn how to use ‘If statements’. If statements are useful for making certain blocks of code run only when the condition is met. We can make programs that do different things based on certain conditions. This is like how we make decisions in real life. For example, “If it rains, I’ll take an umbrella”.
+</p>
 
 <h4>Demonstration:</h4>
 
 <p>Videos will be added after/during reading week</p>
  
-<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
  
 <h4>Exercises:</h4>
-<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
  
 <ul> 
 <li>Write a program that prints “Launch successful” if the user inputs a number less than 3 and “Launch failed” otherwise</li>
@@ -159,7 +155,7 @@ which.style.top=0
 <h4><strong>Solutions:</strong></h4>
 <p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
 
-<a href="../../solutions/lesson3/for.swift" target="_blank"> <strong> Download</strong></a>
+<a href="../../solutions/conditionals.swift" target="_blank"> <strong> Download</strong></a>
 
 
 
