--- a/pages/swift/loops.html
+++ b/pages/swift/loops.html
@@ -137,6 +137,8 @@ which.style.top=0
 
 
 <div id="centerDiv">
+<h2 align="center"><strong>Loops</strong></h2>
+<p>Sometimes a program needs to run the same code many times in a row. It wouldn’t make sense to type out the code hundreds of times. Luckily, we can use loops to run a piece of code over and over again.</p>
 <h3 align="center"><strong>Lesson 2: For Loops</strong></h3>
 
 <h4><strong>Objective:</strong></h4>
@@ -159,6 +161,10 @@ which.style.top=0
 
 <p>In the above example, the counter i is set to 0 and the block of code within the loop will run. After the first time the code runs, i is incremented. </p>
 
+<h4><strong>Examples:</strong></h4>
+<p>Go ahead and look at our example code</p>
+
+<a href="../../examples/swift/loops/example4/main.swift" target="_blank"> <strong> Download</strong></a>
 
 <h4><strong>Demonstration:</strong></h4>
 
