--- a/pages/swift/variables.html
+++ b/pages/swift/variables.html
@@ -138,7 +138,7 @@ which.style.top=0
 
 
 <div id="centerDiv">
-<h3 align="center">Lesson 5: Variables</h3>
+<h3 align="center">Lesson 5: Arrays</h3>
 
 <h4>Objective:</h4>
 <p>In this lesson you will learn how to use collection types such as arrays and dictionaries. These are useful for managing groups of the same data type.
