--- a/pages/swift/functions.html
+++ b/pages/swift/functions.html
@@ -23,6 +23,63 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+		<style>
+	.shakeimage{
+	position:relative
+	}
+	</style>
+	<script language="JavaScript1.2">
+
+	/*
+	Shake image script (onMouseover)-
+	(c) Dynamic Drive (www.dynamicdrive.com)
+	For full source code, usage terms, and 100's more DHTML scripts, visit http://dynamicdrive.com
+	*/
+
+	//configure shake degree (where larger # equals greater shake)
+	var rector=3
+
+	///////DONE EDITTING///////////
+	var stopit=0
+	var a=1
+
+	function init(which){
+	stopit=0
+	shake=which
+	shake.style.left=0
+	shake.style.top=0
+	}
+
+	function rattleimage(){
+	if ((!document.all&&!document.getElementById)||stopit==1)
+	return
+	if (a==1){
+	shake.style.top=parseInt(shake.style.top)+rector+"px"
+	}
+	else if (a==2){
+	shake.style.left=parseInt(shake.style.left)+rector+"px"
+	}
+	else if (a==3){
+	shake.style.top=parseInt(shake.style.top)-rector+"px"
+	}
+	else{
+	shake.style.left=parseInt(shake.style.left)-rector+"px"
+	}
+	if (a<4)
+	a++
+	else
+	a=1
+	setTimeout("rattleimage()",50)
+	}
+
+	function stoprattle(which){
+	stopit=1
+	which.style.left=0
+	which.style.top=0
+	}
+
+	</script>
+
 
 </head>
 
@@ -93,17 +150,11 @@
 <li>Write a function takes a String and adds the word “Swiftem” to it and returns it. Then print the returned number</li>
 </ul>
 
-<p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
-
-<a href="../../solutions/functions.swift" target="_blank"> <strong> Download</strong></a>
-
 <h4><strong>Solutions:</strong></h4>
 <p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
+<a href="../../solutions/functions.swift" target="_blank"> <strong> Download</strong></a>
 </div>
-<div id="leftcolumn">
 
-
-</div>
 <div id="rightcolumn">
 	<div class="link-button-wrapper">
 	<a href="../../ios.html">
@@ -111,11 +162,11 @@
 	</a>
 </div>
 
-<div id="footing">
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>
+<!-- <div id="footing"> -->
+ <!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a> -->
 
 
- <p1> </p1></div>
+ <!-- <p1> </p1></div> -->
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
