Added video to basics.html.

--- a/pages/swift/basics.html
+++ b/pages/swift/basics.html
@@ -147,8 +147,7 @@ which.style.top=0
 
 <h4>Demo</h4>
 
-
-<p>#############################</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lKHlYhZFU0s" frameborder="0" allowfullscreen></iframe>
 
 <h4><strong>Solutions:</strong></h4>
 <p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
