Added download link to basics.html.

--- a/pages/swift/basics.html
+++ b/pages/swift/basics.html
@@ -162,7 +162,7 @@ which.style.top=0
 </ul>
 
 <h4>Answers</h4>
-<p>#########################</p>
+<a href="../../solutions/lesson1.swift" target="_blank"> <strong> Download</strong></a>
 
 
 </div>
