--- a/pages/swift/basics.html
+++ b/pages/swift/basics.html
@@ -149,7 +149,7 @@ which.style.top=0
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lKHlYhZFU0s" frameborder="0" allowfullscreen></iframe>
 
-<h4><strong>Solutions:</strong></h4>
+<h4><strong>Examples:</strong></h4>
 <p>Before you carry on your journey, check your solutions match the ones from Swiftem HQ</p>
 
 <a href="../../solutions/lesson3/for.swift" target="_blank"> <strong> Download</strong></a>
