changed swift homepage's sidebar to link to the updated pages

--- a/home.html
+++ b/home.html
@@ -100,23 +100,26 @@ which.style.top=0
                         The Solar Swiftem
                     </a>
                 </li>
-                 <li>
-                    <a href="pages/swift/basics.html">Printing</a>
+                <li>
+                    <a href="start.html">Getting Started</a>
                 </li>
                 <li>
-                    <a href="pages/swift/loops.html">Loops</a>
+                    <a href="vars.html">Variables and Types</a>
                 </li>
                 <li>
-                    <a href="pages/swift/conditionals.html">Conditionals</a>
-                </li>
-                  <li>
-                    <a href="pages/swift/variables.html">Arrays</a>
+                    <a href="controlflow.html">Conditionals</a>
                 </li>
                 <li>
-                    <a href="pages/swift/functions.html">Functions</a>
+                    <a href="repetition.html">Loops</a>
                 </li>
-                  <li>
-                    <a href="ios.html">Planet iOS</a>
+                <li>
+                    <a href="collections.html">Arrays</a>
+                </li>
+                <li>
+                    <a href="methods.html">Functions</a>
+                </li>
+                <li>
+                    <a href="../../ios.html">Planet iOS</a>
                 </li>
 
 
