fixed links from home.html

--- a/home.html
+++ b/home.html
@@ -101,22 +101,22 @@ which.style.top=0
                     </a>
                 </li>
                 <li>
-                    <a href="start.html">Getting Started</a>
+                    <a href="pages/swift/start.html">Getting Started</a>
                 </li>
                 <li>
-                    <a href="vars.html">Variables and Types</a>
+                    <a href="pages/swift/vars.html">Variables and Types</a>
                 </li>
                 <li>
-                    <a href="controlflow.html">Conditionals</a>
+                    <a href="pages/swift/controlflow.html">Conditionals</a>
                 </li>
                 <li>
-                    <a href="repetition.html">Loops</a>
+                    <a href="pages/swift/repetition.html">Loops</a>
                 </li>
                 <li>
-                    <a href="collections.html">Arrays</a>
+                    <a href="pages/swift/collections.html">Arrays</a>
                 </li>
                 <li>
-                    <a href="methods.html">Functions</a>
+                    <a href="pages/swift/methods.html">Functions</a>
                 </li>
                 <li>
                     <a href="../../ios.html">Planet iOS</a>
