--- a/home.html
+++ b/home.html
@@ -148,7 +148,7 @@ which.style.top=0
 
 
 <div class="link-button-wrapper">
-    <a href="pages/swift/basics.html">
+    <a href="pages/swift/start.html">
              <img src="link1.png"class="shakeimage" onMouseover="init(this);rattleimage()" onMouseout="stoprattle(this);top.focus()" onClick="top.focus()">
 
         <!--<h6>Take Off!</h6>-->
