--- a/pages/swift/pre.html
+++ b/pages/swift/pre.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+<link rel="icon" href="icon.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,13 +10,12 @@
     <meta name="author" content="">
 
     <title>The Solar Swiftem</title>
-	<link rel="icon" href="icon.png">
+
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="../../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,8 +23,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-     <style>
+  <style>
 .shakeimage{
 position:relative
 }
@@ -82,13 +80,9 @@ which.style.top=0
 
 </script>
 
-
 </head>
 
 <body>
-
-
-
 
     <div id="wrapper">
 
@@ -96,27 +90,27 @@ which.style.top=0
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a href="../../index.html">
                         The Solar Swiftem
                     </a>
                 </li>
-                <li>
-                    <a href="pages/swift/start.html">Getting Started</a>
+               <li>
+                    <a href="start.html">Getting Started</a>
                 </li>
                 <li>
-                    <a href="pages/swift/vars.html">Variables and Types</a>
+                    <a href="vars.html">Variables and Types</a>
                 </li>
                 <li>
-                    <a href="pages/swift/controlflow.html">Conditionals</a>
+                    <a href="controlflow.html">Conditionals</a>
                 </li>
                 <li>
-                    <a href="pages/swift/repetition.html">Loops</a>
+                    <a href="repetition.html">Loops</a>
                 </li>
                 <li>
-                    <a href="pages/swift/collections.html">Arrays</a>
+                    <a href="collections.html">Arrays</a>
                 </li>
                 <li>
-                    <a href="pages/swift/methods.html">Functions</a>
+                    <a href="methods.html">Functions</a>
                 </li>
                 <li>
                     <a href="../../ios.html">Planet iOS</a>
@@ -133,44 +127,46 @@ which.style.top=0
         </div>
         <br>
         <div id="heading">
-        <!--<h1 align="center"> The Solar Swiftem </h1> -->
+        <h1 align="center"> The Solar Swiftem </h1>
         <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a> -->
-
 
 
         </div> <!--heading -->
         <br>
 
-<div class="container-fluid" id="maincontent">
-<h2> Welcome to Planet Swift! </h2>
-<h4> Start your first journey and learn the Swift basics! </h4>
+
+
+<div id="centerDiv">
+<h3 align="center"><strong>Pre-Requisites</strong></h3>
+
+<p>The Solar Swiftem is designed to be a fun and unique way to teach children aged 11-13 how to use the language Swift in order to build their own apps for iPhone and iPad.
+
+We feel that there are not enough tutorials out there that allow children to make their own applications for iPhone and iPad. Therefore, we have decided to make a series of tutorial videos which guide you through the steps needed to make an app which you can download straight onto your phone or tablet. We will start by taking you through a series of Planets teaching you the basic programming concepts, before showing you how you can put all of this knowledge together in order to make your app. 
+</p>
+
+
+<h4><strong>Who can start their journey?</strong></h4>
+
+<p>We allow anyone to enter the Solar Swiftem and want as many children to travel through as possible! However, in order to use swift to its full advantage having a Mac is ideal. Watching the getting started tutorial will show all you Mac users how to kick start the engine and head into space! </p>
+
+
+<h4><strong>So, what are you waiting for?</strong></h4>
+
+<p>Hit that Getting Started link in the top left and prepare yourself for an unstoppable journey through The Solar Swiftem! </p>
 
 
 
-<div class="link-button-wrapper">
-    <a href="pages/swift/pre.html">
-             <img src="link1.png"class="shakeimage" onMouseover="init(this);rattleimage()" onMouseout="stoprattle(this);top.focus()" onClick="top.focus()">
-
-        <!--<h6>Take Off!</h6>-->
-
-    </a>
-</div>
+<!--<div class="footing"> -->
+ <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
-</div>
-
-
-<!--<div id = "footing">-->
-<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
-
-
-	<!-- /#sidebar-wrapper -->
+ <p1> </p1></div>
+        <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-       <!-- <div id="page-content-wrapper"> -->
-          <!--  <div class="container-fluid"> -->
-                <!--
-<div class="row">
+       <!-- <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
                     <div class="col-lg-12">
                         <h1>The Solar Swiftem</h1>
 
@@ -182,40 +178,34 @@ which.style.top=0
         </div>
 
         <p1> Hello </p1>
-        <!~~ /#page-content-wrapper ~~>
+        <!-- /#page-content-wrapper -->
 
-    </div>
-    <!~~ /#wrapper ~~>
+    </div> -->
+    <!-- /#wrapper -->
 
-
-   <!~~ jQuery ~~>
+    <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
-    <!~~ Bootstrap Core JavaScript ~~>
+    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!~~ Menu Toggle Script ~~>
+    <!-- Menu Toggle Script -->
     <script>
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
     </script>
- -->
 
-	<a href="https://www.facebook.com/solarswiftem">
-		<img src="img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px;">
+   <a href="https://www.facebook.com/solarswiftem">
+		<img src="../../img/facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px;">
 	</a>
 	<a href="https://twitter.com/solarswiftem">
-		<img src="img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 45px;">
+		<img src="../../img/twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
 		<a href="https://developer.apple.com/swift/">
-		<img src="img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 90px;">
+		<img src="../../img/swiftLogo.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:absolute; right:0px; align: right; top: 0px; right: 90px;">
 	</a>
-
-
-
-</div>
 </body>
 
 </html>
